Fix caption style and galleries alignment see #72

--- a/assets/scss/blocks/core/image/_editor.scss
+++ b/assets/scss/blocks/core/image/_editor.scss
@@ -1,9 +1,16 @@
 
-.editor-block-list__block {
+.editor-block-list__block,
+.block-editor-block-list__block {
     clear: both;
 
-    .wp-block-image img {
-        display: block;
+    .wp-block-image {
+        img {
+            display: block;
+        }
+
+        figcaption {
+            @include apply-font(body);
+        }
     }
 
     &[data-align="full"] .wp-block-image figcaption {
