--- a/assets/scss/setup/_variables.scss
+++ b/assets/scss/setup/_variables.scss
@@ -68,3 +68,6 @@ $theme-button-hover-background-color: transparent;
 $theme-button-hover-border-color: var(--current-dark-primary);
 
 $theme-button-text-arrow-size: 1.15em;
+
+// OPTIONS
+$theme-caption-style: 'overlay';
