--- a/assets/scss/setup/mixins/_caption.scss
+++ b/assets/scss/setup/mixins/_caption.scss
@@ -1,21 +1,15 @@
+$theme-caption-style: 'overlay' !default;
+
 @mixin caption {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    right: 0;
-
-    padding: 0.5em 0.75em;
-    overflow: hidden;
-
-    color: var(--current-light-primary);
-    white-space: nowrap;
-    transform: translateZ(0);
-
-    &:after {
-        content: "";
-        @include cover;
-        opacity: 0.6;
-        z-index: -1;
-        background: var(--current-dark-secondary);
+    @include apply-font(body);
+    @if $theme-caption-style == 'overlay' {
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        max-height: 100%;
+        overflow: auto;
+        color: var(--current-light-primary);
+        text-align: center;
+        background: linear-gradient(0deg,rgba(0,0,0,.7),rgba(0,0,0,.3) 70%,transparent);
     }
 }
